# codecrafters-http-server-rust

./: Cargo.toml  README.md
src/: body.rs  constants.rs  content.rs  main.rs  request.rs  response.rs
src/header/: encoding.rs  errors.rs  methods.rs  mod.rs  request_header.rs  response_header.rs  status.rs
