# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "http-server-starter-rust"
version = "0.1.0"
authors = ["Aryan Tikarya <akaladarshi@gmail.com>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
nom = "7.1.3"                                       # parser combinators
itertools = "0.12.1"
regex = "1.10.4"
# General iterator helpers
[dev-dependencies]
pretty_assertions = "1.3.0"                         # nicer looking assertions

